src/test/ui/generator/no-parameters-on-generators.stderr
error[E0698]: type inside generator must be known in this context
  --> $DIR/no-parameters-on-generators.rs:4:16
   |
LL |     let gen = |start| {
   |                ^^^^^ cannot infer type
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/no-parameters-on-generators.rs:6:9
   |
LL |         yield;
   |         ^^^^^

error[E0698]: type inside generator must be known in this context
  --> $DIR/no-parameters-on-generators.rs:6:9
   |
LL |         yield;
   |         ^^^^^ cannot infer type
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/no-parameters-on-generators.rs:6:9
   |
LL |         yield;
   |         ^^^^^

error[E0698]: type inside generator must be known in this context
  --> $DIR/no-parameters-on-generators.rs:6:9
   |
LL |         yield;
   |         ^^^^^ cannot infer type
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/no-parameters-on-generators.rs:6:9
   |
LL |         yield;
   |         ^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0698`.
